// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`browser no module: dist/browser-no-module.browser.cjs.js 1`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

let thing = "wow";
if (typeof window !== "undefined") {
  thing = "something";
}
if (typeof document !== undefined) {
  thing += "other";
}
var thing$1 = thing;

exports["default"] = thing$1;
"
`;

exports[`browser no module: dist/browser-no-module.cjs.js 1`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

let thing = "wow";
if (typeof window !== "undefined") {
  thing = "something";
}
if (typeof document !== undefined) {
  thing += "other";
}
var thing$1 = thing;

exports["default"] = thing$1;
"
`;

exports[`browser no module: package.json 1`] = `
{
  "browser": {
    "./dist/browser-no-module.cjs.js": "./dist/browser-no-module.browser.cjs.js",
  },
  "main": "dist/browser-no-module.cjs.js",
  "name": "browser-no-module",
  "preconstruct": {
    "dynamicImportInCjs": false,
    "exports": false,
    "imports": false,
  },
}
`;

exports[`browser no module: src/index.js 1`] = `
"let thing = "wow";

if (typeof window !== "undefined") {
  thing = "something";
}

if (typeof document !== undefined) {
  thing += "other";
}

export default thing;"
`;

exports[`should lazily get globals: dist/umd-unused-peer-dep.cjs.js 1`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

var index = "something";

exports["default"] = index;
"
`;

exports[`should lazily get globals: dist/umd-unused-peer-dep.umd.min.js 1`] = `
"!function(e,n){"object"==typeof exports&&"undefined"!=typeof module?module.exports=n():"function"==typeof define&&define.amd?define(n):(e="undefined"!=typeof globalThis?globalThis:e||self).validPackage=n()}(this,(function(){"use strict";return"something"}));
//# sourceMappingURL=umd-unused-peer-dep.umd.min.js.map
"
`;

exports[`should lazily get globals: src/index.js 1`] = `"export default "something";"`;

exports[`typescript with forced dts emit: dist/declarations/src/create-store.d.ts 1`] = `
"import { Action } from "@reduxjs/toolkit";
import { ThunkAction } from "redux-thunk";
import { RootState } from "./root-reducer.js";
export type AppThunk = ThunkAction<void, RootState, unknown, Action<string>>;
export declare function createStore(): any;
"
`;

exports[`typescript with forced dts emit: dist/declarations/src/index.d.ts 1`] = `
"export { createStore } from "./create-store.js";
export type { AppThunk } from "./create-store.js";
export type { RootState } from "./root-reducer.js";
"
`;

exports[`typescript with forced dts emit: dist/declarations/src/root-reducer.d.ts 1`] = `
"export declare const rootReducer: any;
export type RootState = ReturnType<typeof rootReducer>;
"
`;

exports[`typescript with forced dts emit: dist/typescript-force-dts-emit.cjs.d.ts 1`] = `
"export * from "./declarations/src/index.js";
//# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJmaWxlIjoidHlwZXNjcmlwdC1mb3JjZS1kdHMtZW1pdC5janMuZC50cyIsInNvdXJjZVJvb3QiOiIiLCJzb3VyY2VzIjpbIi4vZGVjbGFyYXRpb25zL3NyYy9pbmRleC5kLnRzIl0sIm5hbWVzIjpbXSwibWFwcGluZ3MiOiJBQUFBIn0=
"
`;

exports[`typescript with forced dts emit: dist/typescript-force-dts-emit.cjs.js 1`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

var toolkit = require('@reduxjs/toolkit');

// @ts-ignore (installed during test)
var rootReducer = toolkit.combineReducers({
  /* blah blah blah */
});

// @ts-ignore (installed during test)
function createStore() {
  return toolkit.configureStore({
    reducer: rootReducer
  });
}

exports.createStore = createStore;
"
`;

exports[`typescript with forced dts emit: dist/typescript-force-dts-emit.esm.js 1`] = `
"import { combineReducers, configureStore } from '@reduxjs/toolkit';

// @ts-ignore (installed during test)
var rootReducer = combineReducers({
  /* blah blah blah */
});

// @ts-ignore (installed during test)
function createStore() {
  return configureStore({
    reducer: rootReducer
  });
}

export { createStore };
"
`;

exports[`using external @babel/runtime helpers: dist/external-babel-runtime.cjs.js 1`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

var _createClass = require('@babel/runtime/helpers/createClass');
var _classCallCheck = require('@babel/runtime/helpers/classCallCheck');

var Foo = /*#__PURE__*/_createClass(function Foo() {
  _classCallCheck(this, Foo);
});

exports["default"] = Foo;
"
`;

exports[`using external @babel/runtime helpers: dist/external-babel-runtime.esm.js 1`] = `
"import _createClass from '@babel/runtime/helpers/esm/createClass';
import _classCallCheck from '@babel/runtime/helpers/esm/classCallCheck';

var Foo = /*#__PURE__*/_createClass(function Foo() {
  _classCallCheck(this, Foo);
});

export { Foo as default };
"
`;

exports[`using external @babel/runtime helpers: package.json 1`] = `
{
  "dependencies": {
    "@babel/runtime": "^7.0.0",
  },
  "main": "dist/external-babel-runtime.cjs.js",
  "module": "dist/external-babel-runtime.esm.js",
  "name": "external-babel-runtime",
  "preconstruct": {
    "dynamicImportInCjs": false,
    "exports": false,
    "imports": false,
  },
}
`;

exports[`using external @babel/runtime helpers: src/index.js 1`] = `"export default class Foo {}"`;
